fixed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,28 @@ header {
   padding: 2em 1.5em;
 }
 
+/* SCROLL BAR */
+/* ========== */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--darkWhite);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--darkBlue);
+}
+
+@supports (scrollbar-color: blue gray) {
+  * {
+    scrollbar-color: var(--darkBlue) var(--darkWhite);
+    scrollbar-width: thin;
+  }
+}
+
 /* MOBILE  NAV */
 
 .hamburger {
